# Physics_bayes

./: Bayesian_critical.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: Bayesian_critical-checkpoint.ipynb
