[tool.poetry]
name = "physics-bayesian"
version = "0.1.0"
description = ""
authors = ["Samuel Bourgeat <samuel.kumar@hotmail.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
pymc = "^5.16.2"
bambi = "^0.14.0"
tifffile = "^2024.7.24"
jupyter = "^1.0.0"
plotly = "^5.23.0"
scikit-learn = "^1.5.1"
umap-learn = "^0.5.6"
statsmodels = "^0.14.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
